[gd_scene load_steps=34 format=2]

[ext_resource path="res://sounds/music/bckg_music_forest.mp3" type="AudioStream" id=1]
[ext_resource path="res://sounds/music/bckg_ambient_forest.mp3" type="AudioStream" id=2]
[ext_resource path="res://src/actors/player/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/levels/earlyArea1.gd" type="Script" id=4]
[ext_resource path="res://fonts/monogram.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://artwork/forest.png" type="Texture" id=6]
[ext_resource path="res://src/actors/kopatych/kopatych.tscn" type="PackedScene" id=7]
[ext_resource path="res://icon.png" type="Texture" id=8]
[ext_resource path="res://src/levels/levelArea2.gd" type="Script" id=9]
[ext_resource path="res://ui/dialog.png" type="Texture" id=10]
[ext_resource path="res://fonts/progresspixel-bold.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://artwork/village.png" type="Texture" id=13]
[ext_resource path="res://src/prefabs/menus/ExitToMainButton.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/prefabs/menus/ResumeButton.tscn" type="PackedScene" id=15]
[ext_resource path="res://sounds/click_menu.wav" type="AudioStream" id=16]
[ext_resource path="res://src/levels/Pause.gd" type="Script" id=17]
[ext_resource path="res://src/levels/miniGame.tscn" type="PackedScene" id=18]
[ext_resource path="res://src/shaders/vignette.shader" type="Shader" id=19]
[ext_resource path="res://src/shaders/vignette.png" type="Texture" id=20]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 19 )
shader_param/debanding_dither = 0.0
shader_param/blur = 0.1
shader_param/vignette_darkness = 0.06
shader_param/vignette = ExtResource( 20 )

[sub_resource type="Shader" id=2]
code = "
shader_type canvas_item;

uniform float offset = 1f;

void fragment(){
	vec4 green_channel = texture(SCREEN_TEXTURE, SCREEN_UV);
	vec4 red_channel = texture(SCREEN_TEXTURE, vec2(SCREEN_UV.x + (offset * SCREEN_PIXEL_SIZE.x), SCREEN_UV.y));
	vec4 blue_channel = texture(SCREEN_TEXTURE, vec2(SCREEN_UV.x - (offset * SCREEN_PIXEL_SIZE.x), SCREEN_UV.y));
	COLOR = vec4(red_channel.r, green_channel.g, blue_channel.b, 1f);
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/offset = 1.25

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

const vec3 color = vec3(0, 0, 0);

void fragment() {
	COLOR = vec4(color, 1);
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )

[sub_resource type="Theme" id=6]
/colors/ = Color( 0, 0, 0, 1 )

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

// Gonkee's fog shader for Godot 3 - full tutorial https://youtu.be/QEaTsz_0o44
// If you use this shader, I would prefer it if you gave credit to me and my channel

uniform vec3 color = vec3(0.2, 0.2, 0.2);
const int OCTAVES = 4;

float rand(vec2 coord){
	return fract(sin(dot(coord, vec2(56, 78)) * 1000.0) * 1000.0);
}

float noise(vec2 coord){
	vec2 i = floor(coord);
	vec2 f = fract(coord);

	// 4 corners of a rectangle surrounding our point
	float a = rand(i);
	float b = rand(i + vec2(1.0, 0.0));
	float c = rand(i + vec2(0.0, 1.0));
	float d = rand(i + vec2(1.0, 1.0));

	vec2 cubic = f * f * (3.0 - 2.0 * f);

	return mix(a, b, cubic.x) + (c - a) * cubic.y * (1.0 - cubic.x) + (d - b) * cubic.x * cubic.y;
}

float fbm(vec2 coord){
	float value = 0.0;
	float scale = 0.5;

	for(int i = 0; i < OCTAVES; i++){
		value += noise(coord) * scale;
		coord *= 2.0;
		scale *= 0.5;
	}
	return value;
}

void fragment() {
	vec2 coord = UV * 20.0;

	vec2 motion = vec2( fbm(coord + vec2(TIME * -0.5, TIME * 0.5)) );

	float final = fbm(coord + motion);

	COLOR = vec4(color, final * 0.5);
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/color = Vector3( 0.3, 0.3, 0.3 )

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = ExtResource( 12 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 10, 137.985 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 15.1815, 88.6552 )

[sub_resource type="DynamicFont" id=12]
size = 64
outline_size = 2
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 56.7422, 88.6552 )

[sub_resource type="DynamicFont" id=14]
size = 64
outline_size = 2
font_data = ExtResource( 5 )

[node name="Forest" type="Node2D"]
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="ColorCorrection" type="CanvasModulate" parent="."]
position = Vector2( 54, -21 )
color = Color( 0.623529, 0.596078, 0.596078, 1 )

[node name="SoundsBackground" type="Node" parent="."]

[node name="BckgMusic" type="AudioStreamPlayer" parent="SoundsBackground"]
pause_mode = 2
stream = ExtResource( 1 )
volume_db = -15.0
pitch_scale = 0.8
autoplay = true

[node name="BckgAmbient2" type="AudioStreamPlayer" parent="SoundsBackground"]
pause_mode = 2
stream = ExtResource( 2 )
volume_db = -22.0
autoplay = true

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( -1161.88, 172.647 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 3.66693, -138.272 )
current = true
smoothing_enabled = true
smoothing_speed = 4.0

[node name="Vignette" type="CanvasLayer" parent="Player/Camera2D"]

[node name="ColorRect" type="ColorRect" parent="Player/Camera2D/Vignette"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ChromaticAberration" type="CanvasLayer" parent="Player/Camera2D"]

[node name="ColorRect" type="ColorRect" parent="Player/Camera2D/ChromaticAberration"]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 1.0
rect_pivot_offset = Vector2( -696.238, 785.158 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelBottom" type="Panel" parent="Player/Camera2D"]
material = SubResource( 5 )
margin_left = -863.0
margin_top = 270.038
margin_right = 467.0
margin_bottom = 498.038
rect_scale = Vector2( 1.32, 0.92857 )
rect_pivot_offset = Vector2( 512.936, 75.3163 )
theme = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelBottom2" type="Panel" parent="Player/Camera2D"]
material = SubResource( 5 )
margin_left = -859.61
margin_top = -558.649
margin_right = 470.39
margin_bottom = -270.649
rect_scale = Vector2( 1.32, 0.92857 )
rect_pivot_offset = Vector2( 512.936, 75.3163 )
theme = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -2

[node name="Fog" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( -122, 0 )
motion_scale = Vector2( 0, 1 )

[node name="icon" type="Sprite" parent="ParallaxBackground/Fog"]
material = SubResource( 8 )
position = Vector2( 236, 104 )
scale = Vector2( 24.2362, -20.3699 )
z_index = -3
z_as_relative = false
texture = ExtResource( 8 )

[node name="Lake" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 1 )
motion_mirroring = Vector2( 5615, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Lake"]
position = Vector2( 0, 236 )
z_index = 1
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 115, 3948, 5620, 249 )

[node name="ParallaxLayer1" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 0, -34 )
motion_scale = Vector2( 0.2, 1 )
motion_mirroring = Vector2( 5615, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer1"]
position = Vector2( 0, 28 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 115, 3333, 5421, 508 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.3, 1 )
motion_mirroring = Vector2( 5615, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource( 13 )
region_enabled = true
region_rect = Rect2( 380, 3779, 5619, 508 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 0, -129 )
motion_mirroring = Vector2( 5615, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( 0, 115 )
texture = ExtResource( 13 )
region_enabled = true
region_rect = Rect2( 349, 2730.58, 5678, 662.418 )

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 0, -129 )
motion_mirroring = Vector2( 5615, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2( 0, 350.939 )
texture = ExtResource( 13 )
region_enabled = true
region_rect = Rect2( 537, 980, 5043, 183 )

[node name="ColorCorrection" type="CanvasModulate" parent="ParallaxBackground"]
color = Color( 0.596078, 0.529412, 0.529412, 1 )

[node name="ParallaxForeground" type="ParallaxBackground" parent="."]
layer = 0

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxForeground"]
z_index = 1
motion_scale = Vector2( 2, 1 )
motion_mirroring = Vector2( 5615, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxForeground/ParallaxLayer4"]
position = Vector2( 0, 104 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 107, 1068, 5619, 708 )

[node name="decor_objects" type="Node2D" parent="."]

[node name="collide_objects" type="Node2D" parent="."]

[node name="interact_objects" type="Node2D" parent="."]
z_index = -1

[node name="Kopatych NPC" parent="." instance=ExtResource( 7 )]
position = Vector2( 316.74, 168.244 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="NoteCanvas" type="NinePatchRect" parent="UI"]
visible = false
margin_left = 59.5231
margin_top = 70.6206
margin_right = 443.523
margin_bottom = 636.621
texture = ExtResource( 10 )
region_rect = Rect2( 23.9391, 25.5505, 785.693, 210.529 )
patch_margin_left = 25
patch_margin_top = 25
patch_margin_right = 25
patch_margin_bottom = 24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="UI/NoteCanvas"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
custom_fonts/normal_font = SubResource( 9 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 2
text = "День 2. Я все еще не понимаю где мы находимся. Кругом творится какая-то чертовщина, звуки отовсюду, туман который пахнет страхом... "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="VBoxContainer" parent="UI"]
pause_mode = 2
visible = false
margin_left = 117.737
margin_top = 31.5417
margin_right = 1157.74
margin_bottom = 695.541
custom_constants/separation = 30
alignment = 1
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="UI/Pause"]
margin_top = 204.0
margin_right = 1040.0
margin_bottom = 459.0
custom_constants/separation = -15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" parent="UI/Pause/Buttons" instance=ExtResource( 15 )]
margin_right = 1040.0

[node name="ExitToMainButton" parent="UI/Pause/Buttons" instance=ExtResource( 14 )]
margin_top = 120.0
margin_right = 1040.0
margin_bottom = 255.0

[node name="MenuClick" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 16 )
pitch_scale = 1.7

[node name="MiniGame" parent="." instance=ExtResource( 18 )]
visible = false
position = Vector2( -1151.85, 57.3887 )

[node name="earlyArea" type="Area2D" parent="."]
position = Vector2( -1711.66, 103.61 )
script = ExtResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="earlyArea"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="earlyArea/StaticBody2D"]
shape = SubResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="earlyArea"]
shape = SubResource( 11 )

[node name="QuestionMark" type="Label" parent="earlyArea"]
visible = false
margin_left = -10.1744
margin_top = -149.504
margin_right = 13.8256
margin_bottom = -98.5038
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="earlyArea"]
wait_time = 5.0

[node name="levelArea" type="Area2D" parent="."]
position = Vector2( -1976.72, 103.61 )
script = ExtResource( 9 )
scene_to_load = "res://src/levels/forest.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="levelArea"]
shape = SubResource( 13 )

[node name="QuestionMark" type="Label" parent="levelArea"]
visible = false
margin_left = -10.1744
margin_top = -149.504
margin_right = 13.8256
margin_bottom = -98.5038
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="earlyArea" to="earlyArea" method="_on_earlyArea_body_entered"]
[connection signal="body_exited" from="earlyArea" to="earlyArea" method="_on_earlyArea_body_exited"]
[connection signal="timeout" from="earlyArea/Timer" to="earlyArea" method="_on_Timer_timeout"]
[connection signal="body_entered" from="levelArea" to="levelArea" method="_on_levelArea_body_entered"]
[connection signal="body_exited" from="levelArea" to="levelArea" method="_on_levelArea_body_exited"]
